# Mind-on-road

./: .editorconfig  .gitignore  AGENTS.md  README.md  package-lock.json
.codex/: config.toml
agent/: README.md  source_registry.md
automation/: .env.example  Dockerfile  README.md  pyproject.toml
automation/output/batch-reports/20260408T083451Z/: report.json  report.md
automation/output/batch-reports/20260408T083451Z/json/bad-images/antoan-driving-license/: photo_2026-04-08_10-54-08.json  photo_2026-04-08_10-54-16.json
automation/output/batch-reports/20260408T083451Z/json/bad-images/antoan-id/: photo_2026-04-08_10-53-14.json  photo_2026-04-08_10-53-22.json
automation/output/batch-reports/20260408T083451Z/json/bad-images/emanuela/: IMG_0390.json  photo_2026-04-08_10-31-18.json
automation/output/batch-reports/20260408T083451Z/json/images/: driver-license-1024x637.json  maxresdefault.json
automation/output/batch-reports/20260408T083451Z/json/pdf/: car-card.json  id-card.json
automation/scripts/: batch_test_bg_documents.py  extract_bg_document.py
automation/src/document_intelligence/: __init__.py  batch_report.py  cli.py  config.py  exceptions.py  file_loader.py  models.py  ocr_engine.py  pdf_renderer.py  pipeline.py  text_parser.py  worker.py
automation/src/driveadmin_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
automation/tests/: test_batch_report.py  test_ocr_engine.py  test_text_parser.py  test_worker.py
backend/: .env.example  Dockerfile  MODULE_TEMPLATE.md  NAMING_CONVENTIONS.md  README.md  STRUCTURE_GUIDE.md  docker-compose.yml  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
core/: README.md  source_registry.md
docs/: README.md  architecture_index.md  automation_research_and_regulatory_notes.md  automation_strategy.md  backup_and_disaster_recovery.md  business_plan.md  clean_code_guidelines.md  database_architecture.md  design_prompts.md  designer-promps.md  development_execution_playbook.md  legacy_school_data_reconciliation.md  otchet-vili.xlsx  platform_admin_feature_management.md  presentation_automobileschool.pptx  project_memory_and_sources.md  react_engineering_notes.md  register-silvi-ins.xlsx  (+5 more)
(+429 files in other folders)
